#19878 Fix the job view & bid acceptance dialog on mobile

--- a/css/job.css
+++ b/css/job.css
@@ -27,12 +27,6 @@
     background-image: url('../images/wl-icons/tweet~hover.svg');
 }
 
-@media (max-width: 480px) {
-    #tweet-link {
-        padding: 10px 5px 7px 25px;
-    }
-}
-
 #commentZone > .row:first-child > h3 + a {
     text-align: right;
 }
@@ -301,4 +295,12 @@ section#footer li:nth-child(-n+3) {
 .visits-box .visits {
     font-weight: bold;
     color: #333333;
+}
+
+@media (max-width: 480px) {
+    #tweet-link {
+        padding: 10px 5px 7px 25px;
+    }
+    .visits-box { min-width: 95px; }
+    .info-ID {  }
 }
